src/kubernetes/apps/news/wallabag/manifests/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallabag
  template:
    metadata:
      labels:
        app: wallabag
    spec:
      containers:
      - name: wallabag
        image: wallabag/wallabag:2.6.12
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: wallabag-images
          mountPath: /var/www/wallabag/web/assets/images
      volumes:
      - name: wallabag-images
        persistentVolumeClaim:
          claimName: wallabag-images
      restartPolicy: Always
