src/kubernetes/apps/news/wallabag/manifests/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: wallabag
  namespace: wallabag
spec:
  selector:
    app: wallabag
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
