src/kubernetes/apps/news/wallabag/manifests/ingress.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wallabag
  namespace: wallabag
spec:
  parentRefs:
  - name: nginx
    namespace: nginx-gateway
  hostnames:
  - wallabag.valhallahub.nl
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: wallabag
      port: 80
